@@ -27,6 +27,12 @@
       "type" : "boolean",
       "examples" : [ true, false ]
     },
+    "CombatRank" : {
+      "title" : "CombatRank",
+      "description": "If player",
+      "type" : "integer",
+      "examples" : [ 8 ]
+    },
     "Faction" : {
       "title" : "Faction",
       "description": "If npc",
